; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/ncurses/ncurses/tty/extr_lib_twait.c__nc_gettime.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/ncurses/ncurses/tty/extr_lib_twait.c__nc_gettime.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TRACE_IEVENT = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [18 x i8] c"%s time: %ld msec\00", align 1
@.str.1 = private unnamed_addr constant [4 x i8] c"get\00", align 1
@.str.2 = private unnamed_addr constant [8 x i8] c"elapsed\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32*, i32)* @_nc_gettime to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @_nc_gettime(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = call i32 @time(i32* null)
  store i32 %7, i32* %6, align 4
  %8 = load i32, i32* %4, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %10, label %13

10:                                               ; preds = %2
  %11 = load i32, i32* %6, align 4
  %12 = load i32*, i32** %3, align 8
  store i32 %11, i32* %12, align 4
  br label %13

13:                                               ; preds = %10, %2
  %14 = load i32, i32* %6, align 4
  %15 = load i32*, i32** %3, align 8
  %16 = load i32, i32* %15, align 4
  %17 = sub nsw i32 %14, %16
  %18 = mul nsw i32 %17, 1000
  %19 = sext i32 %18 to i64
  store i64 %19, i64* %5, align 8
  %20 = load i32, i32* @TRACE_IEVENT, align 4
  %21 = load i32, i32* %4, align 4
  %22 = icmp ne i32 %21, 0
  %23 = zext i1 %22 to i64
  %24 = select i1 %22, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.2, i64 0, i64 0)
  %25 = load i64, i64* %5, align 8
  %26 = inttoptr i64 %25 to i8*
  %27 = call i32 @TR(i32 %20, i8* %26)
  %28 = load i64, i64* %5, align 8
  ret i64 %28
}

declare dso_local i32 @time(i32*) #1

declare dso_local i32 @TR(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
